corrected video cropping for mobile view

--- a/styles.css
+++ b/styles.css
@@ -59,6 +59,8 @@ body{
   position: absolute;
   left: 0;
   top: 0;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 
@@ -313,7 +315,7 @@ body{
 @media (max-width: 450px) {
 
   body{
-    font-size: 1.2rem;
+    font-size: 1.5rem;
   }
 
 }
